--- a/src/features/survey/components/surveycard.css
+++ b/src/features/survey/components/surveycard.css
@@ -2,7 +2,9 @@
 .survey-card-context {
     background-color: #fff;
     border-radius: 5px;
-    width: 300px;
+    width: 100%;
+    min-width: 300px;
+    max-width: 300px;
     height: 190px;
     margin: 0 10px 20px 10px;
     cursor: pointer;
